# spbu_c_homeworks

./: CMakeLists.txt  task1.5.c
final/: task1.c
final2/: task1.c
homework1/: task1.1.c  task1.2.c  task1.3.c  task1.4.c  task1.5.c
homework2/: task2.1.c  task2.2.c
homework3/: task1.c  task3.2.c  task3.3.c  task3.c
homework4/: task1.c  task2.md
homework5/: task5.1.c
homework6/: task6.1.c  task6.2.c
homework7/: heap.c  heap.h  task7.1.c
retest1/: task1.c  task2.c
test/: test1.c
test2/: test2.1.c  test2.2.c
